@@ -46,6 +46,7 @@ Other features
  * ``StreamField`` field blocks now accept a ``validators`` argument (Tom Usher)
  * Added edit / delete buttons to snippet index and "don't delete" option to confirmation screen, for consistency with pages (Kevin Howbrook)
  * Added name attributes to all built-in page action menu items (LB (Ben Johnston))
+ * Added validation on the filter string to the Jinja2 image template tag (Jonny Scholes)
 
 
 Bug fixes
