@@ -1,5 +1,6 @@
 import os
 
+from django import template
 from django.conf import settings
 from django.core import serializers
 from django.template import engines
@@ -78,6 +79,16 @@ class TestImagesJinja(TestCase):
             self.render('{{ image(myimage, "width-200") }}', {'myimage': self.bad_image}),
             '<img alt="missing image" src="/media/not-found" width="0" height="0">'
         )
+
+    def test_invalid_character(self):
+        with self.assertRaises(template.TemplateSyntaxError):
+            self.render('{{ image(myimage, "fill-200×200") }}', {'myimage': self.image})
+
+    def test_chaining_filterspecs(self):
+        self.assertHTMLEqual(
+            self.render('{{ image(myimage, "width-200|jpegquality-40") }}', {'myimage': self.image}),
+            '<img alt="Test image" src="{}" width="200" height="150">'.format(
+                self.get_image_filename(self.image, "width-200.jpegquality-40")))
 
     def test_image_url(self):
         self.assertRegex(
